updated- fixed issue with 'scroll down' text overlapping github icon link, updated portfolio section by adding two add. projects, added forked p1 went project, added new images to 'credit.html', added backgorund to resume div with h2 text

--- a/css/main.css
+++ b/css/main.css
@@ -605,7 +605,7 @@ ul.nav > li > a.active{
     color: #bbb;
 }
 /* ==========================================================================
-   Service Section
+   Skills Section
    ========================================================================== */
 .service-section{
     background-image: url(../img/keyboard.jpg);
@@ -695,6 +695,8 @@ ul.nav > li > a.active{
     opacity: 1;
     visibility: visible;
 }
+
+
 /* ==========================================================================
    CTA Section
    ========================================================================== */
@@ -711,6 +713,11 @@ ul.nav > li > a.active{
 .cta-section .cta-content h2{
     font-size: 40px;
     margin-bottom: 25px;
+}
+
+.cta-content {
+    background-color: rgba(255, 255, 255, 0.5);
+    display: inline-block;
 }
 
 
@@ -763,6 +770,8 @@ ul.nav > li > a.active{
     top: 0;
     z-index: -1;
 }
+
+
 /* ==========================================================================
    Footer Section
    ========================================================================== */
