--- a/css/responsive.css
+++ b/css/responsive.css
@@ -77,6 +77,7 @@
     	padding: 15px;
     }
     .navbar-brand{
+        
         padding: 17px 0;
     }
     .menu-btn,
@@ -84,6 +85,7 @@
         display: none;
     }
     .slicknav_menu {
+        
         display:block;
     }
     .contact-info{
@@ -98,6 +100,9 @@
     }
     .cta-section .cta-content h2{ font-size: 20px; }
     
+    #name {
+        margin-top: 15px;
+    }
 }
 /* ---- End of max-width 767px CSS ---- */
 
